# jotacoin

./: .gitignore  dune-project  jotacoin.opam
lib/: dune
test/: dune
