(lang dune 3.9)

(name jotacoin)

(generate_opam_files true)

(source
 (github j0suetm/jotacoin))

(authors "Josué Teodoro <teodoro.josue@pm.me>")

(maintainers "Josué Teodoro")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name jotacoin)
 (synopsis "Yet another shitcoin")
 (description "A decentralized cryptocurrency")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
